# hivekernel

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  HIVEKERNEL-SPEC.md  Makefile  QUICKSTART.md  README.md  TODO.md  USAGE-GUIDE.md  go.mod  go.sum
.claude/: settings.json
configs/: startup-claw.json  startup-demo.json  startup-full.json  startup-showcase.json  (+2 more)
sdk/python/: pyproject.toml
sdk/python/dashboard/: app.py
sdk/python/dashboard/static/: app.js  chat.html  chat.js  cron.html  cron.js  index.html  style.css
sdk/python/examples/: __init__.py  calculator_agent.py  demo_live.py  demo_showcase.py  echo_worker.py  llm_research_team.py  sub_worker.py  team_manager.py  test_e2e.py  test_integration.py  test_plan002_e2e.py  test_plan003_e2e.py  test_runtime_e2e.py  test_team_e2e.py  test_tool_agent_e2e.py
sdk/python/hivekernel_sdk/: __init__.py  __main__.py  agent.py  agent_pb2.py  agent_pb2_grpc.py  architect.py  assistant.py  builtin_tools.py  client.py  coder.py  core_pb2.py  core_pb2_grpc.py  dialog_log.py  github_monitor.py  llm.py  llm_agent.py  loop.py  maid.py  memory.py  orchestrator.py  power_tools.py  queen.py  runner.py  syscall.py  tool_agent.py  tools.py  types.py  web_tools.py  worker.py  workspace_tools.py
sdk/python/tests/: test_agent.py  test_architect.py  test_assistant.py  test_builtin_tools.py  test_coder.py  test_github_monitor.py  test_loop.py  test_maid.py  test_memory.py  test_orchestrator.py  test_power_tools.py  test_queen.py  test_tool_agent.py  test_tools.py  test_web_tools.py  test_workspace_tools.py
(+118 files in other folders)
