[project]
name = "hivekernel-sdk"
version = "0.1.0"
description = "Python SDK for HiveKernel agent runtime"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
